# exascel

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  common.hh  exascel.cxx  exascel.hh  graph.cxx  graph.hh  reader.cxx  reader.hh
tests/: cycle_simp1x1  cycle_simp1x2  empty_simp2x2  simp2x2  test3x4
